# rise-livekit-backend

./: .gitignore  EXCEPTIONAL_EVENTS_PLAN.md  HOW_IT_WORKS.md  QUICKSTART.md  env.template  livekit.toml  pyproject.toml
schedule_mock/: google_schedule_mock_1.txt  google_schedule_mock_2.txt
scripts/: README.md  check_agent_status.py  debug_telephony.sh  dev.sh  encode_firebase_credentials.sh  list_workers.py  make_call.py
src/: agent.py
